--- a/paginas__sudeste/filmes_sudeste/c-elas.html
+++ b/paginas__sudeste/filmes_sudeste/c-elas.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="filmes brasileiros, filmes do brasil, cinema brasileiro, cinema do brasil, cinema, fimes, brasil, sudeste, clássicos do cinema brasil, curadoria filmes, curadoria, clássicos cinema brasil, clássicos cinema brasileiro, aqui_no, aqui no, aquino, akino, aki no, aki_no, filmes sudeste, filmes do sudeste, filmes sudeste brasil, filmes sudeste do brasil, produção sudeste, produção cinematográfica sudeste, produção cinema brasil, produção cinema sudeste, clássicos do cinema brasil, clássicos, clássicos cinema, clássicos cinema brasil, clássicos cinema brasileiro, filmes clássicos do brasil, filmes clássicos brasil, filmes clássicos brasileiros, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste brasileiro, que horas ela volta, que horas ela volta?, marte um, marte 1, (c)elas, celas, rio de janeiro, rj, são paulo, sp, espírito santo, es, minas gerais, mg, divinas divas,os normais, os normais o filme, minha mae e uma peca 1, minha mãe é uma peça 1, minha mae e uma peca, minha mãe é uma peça, paulo gustavo, regina casé, leandra leal, rio 40 graus, nelson pereira dos santos, cidade de deus, Ök’ahpó - Desenforme, okahpo, ok ahpo, desenforme, Ka’a’i - O Ritual da Erva Mate, kaai ritual da erva mate">
     <meta name="description" content="Saiba mais sobre o filme '(C)elas' na Aqui_no. Uma curadoria de filmes brasileiros que os categoriza de acordo com a região do país em que foram produzidos, concebidos, realizados. Um projeto realizado por um grupo de estudantes da Coderhouse para conhecer, assistir, deleitar de filmes feitos aqui no norte, nordeste, centro-oeste, sudeste e sul!">
-    <link rel="shortcut icon" href="/imagens/imagens sudeste/favicon_sudeste.png">
+    <link rel="shortcut icon" href="../../imagens/imagens sudeste/favicon_sudeste.png">
     <title>(C)elas</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html"><strong>Aqui_no</strong></a></li>
-            <li><a href="/paginas_norte/norte.html">_norte</a></li>
-            <li><a href="/paginas_nordeste/nordeste.html">_nordeste</a></li>
-            <li><a href="/paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
-            <li><a href="/paginas__sudeste/sudeste.html">_sudeste</a></li>
-            <li><a href="/paginas__sul/sul.html">_sul</a></li>
-            <li><a href="/pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
+            <li><a href="../../index.html"><strong>Aqui_no</strong></a></li>
+            <li><a href="../../paginas_norte/norte.html">_norte</a></li>
+            <li><a href="../../paginas_nordeste/nordeste.html">_nordeste</a></li>
+            <li><a href="../../paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
+            <li><a href="../../paginas__sudeste/sudeste.html">_sudeste</a></li>
+            <li><a href="../../paginas__sul/sul.html">_sul</a></li>
+            <li><a href="../../pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
         </ul> 
     </nav>
     <header>
-        <a href="/paginas__sudeste/sudeste.html"><img src="/imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
+        <a href="../../paginas__sudeste/sudeste.html"><img src="../../imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
         <h2>_sudeste</h2>
         <h1>(C)elas</h1>
         <table>
@@ -35,7 +35,7 @@
                 <td>17 minutos</td>
             </tr>
         </table>
-        <img src="/imagens/imagens sudeste/filmes sudeste/c-elas.png" alt="foto (C)elas">
+        <img src="../../imagens/imagens sudeste/filmes sudeste/c-elas.png" alt="foto (C)elas">
     </header>
     <section>
     <div>
@@ -48,8 +48,8 @@
     <div>
         Assista em:
     </div>
-    <a href="https://www.youtube.com/watch?v=27NTvdFWJ7g"><img src="/imagens/icone_youtube.png" alt="logo youtube"></a>
-    <a href="https://mubi.com/pt/films/c-elas"><img src="/imagens/icone_mubi.png" alt="logo mubi"></a>
+    <a href="https://www.youtube.com/watch?v=27NTvdFWJ7g"><img src="../../imagens/icone_youtube.png" alt="logo youtube"></a>
+    <a href="https://mubi.com/pt/films/c-elas"><img src="../../imagens/icone_mubi.png" alt="logo mubi"></a>
     </section>
     <footer>
         Aqui_no 2023®
