--- a/paginas__sudeste/filmes_sudeste/cidadeDeDeus.html
+++ b/paginas__sudeste/filmes_sudeste/cidadeDeDeus.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="filmes brasileiros, filmes do brasil, cinema brasileiro, cinema do brasil, cinema, fimes, brasil, sudeste, clássicos do cinema brasil, curadoria filmes, curadoria, clássicos cinema brasil, clássicos cinema brasileiro, aqui_no, aqui no, aquino, akino, aki no, aki_no, filmes sudeste, filmes do sudeste, filmes sudeste brasil, filmes sudeste do brasil, produção sudeste, produção cinematográfica sudeste, produção cinema brasil, produção cinema sudeste, clássicos do cinema brasil, clássicos, clássicos cinema, clássicos cinema brasil, clássicos cinema brasileiro, filmes clássicos do brasil, filmes clássicos brasil, filmes clássicos brasileiros, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste brasileiro, rio de janeiro, rj, são paulo, sp, espírito santo, es, minas gerais, mg, cidade de deus, cdd, Kátia Lund, Fernando Meirelles, Alexandre Rodrigues, Douglas Silva, Alice Braga, Michel Gomes, Matheus Nachtergaele, Seu Jorge, Roberta Rodrigues, Darlan Cunha, oscar, globo de ouro, grande premio do cinema brasileiro">
     <meta name="description" content="Saiba mais sobre o filme 'Cidade de Deus' na Aqui_no. Uma curadoria de filmes brasileiros que os categoriza de acordo com a região do país em que foram produzidos, concebidos, realizados. Um projeto realizado por um grupo de estudantes da Coderhouse para conhecer, assistir, deleitar de filmes feitos aqui no norte, nordeste, centro-oeste, sudeste e sul!">
-    <link rel="shortcut icon" href="/imagens/imagens sudeste/favicon_sudeste.png">
+    <link rel="shortcut icon" href="../../imagens/imagens sudeste/favicon_sudeste.png">
     <title>Cidade de Deus</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html"><strong>Aqui_no</strong></a></li>
-            <li><a href="/paginas_norte/norte.html">_norte</a></li>
-            <li><a href="/paginas_nordeste/nordeste.html">_nordeste</a></li>
-            <li><a href="/paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
-            <li><a href="/paginas__sudeste/sudeste.html">_sudeste</a></li>
-            <li><a href="/paginas__sul/sul.html">_sul</a></li>
-            <li><a href="/pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
+            <li><a href="../../index.html"><strong>Aqui_no</strong></a></li>
+            <li><a href="../../paginas_norte/norte.html">_norte</a></li>
+            <li><a href="../../paginas_nordeste/nordeste.html">_nordeste</a></li>
+            <li><a href="../../paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
+            <li><a href="../../paginas__sudeste/sudeste.html">_sudeste</a></li>
+            <li><a href="../../paginas__sul/sul.html">_sul</a></li>
+            <li><a href="../../pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
         </ul> 
     </nav>
     <header>
-        <a href="/paginas__sudeste/sudeste.html"><img src="/imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
+        <a href="../../paginas__sudeste/sudeste.html"><img src="../../imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
         <h2>_sudeste</h2>
         <h1>Cidade de Deus</h1>
         <h4>Indicado ao Oscar</h4>
@@ -38,7 +38,7 @@
                 <td>105 minutos</td>
             </tr>
         </table>
-        <img src="/imagens/imagens sudeste/filmes sudeste/cidade-de-deus.png" alt="foto Cidade de Deus">
+        <img src="../../imagens/imagens sudeste/filmes sudeste/cidade-de-deus.png" alt="foto Cidade de Deus">
     </header>
     <section>
     <div>
@@ -54,8 +54,8 @@
     <div>
         Assista em:
     </div>
-    <a href="https://globoplay.globo.com/cidade-de-deus/t/5vXVkLJN1R/"><img src="/imagens/icone_globoplay.png" alt="logo globoplay"></a>
-    <a href="https://www.netflix.com/title/60026106"><img src="/imagens/icone_netflix.png" alt="logo netflix"></a>
+    <a href="https://globoplay.globo.com/cidade-de-deus/t/5vXVkLJN1R/"><img src="../../imagens/icone_globoplay.png" alt="logo globoplay"></a>
+    <a href="https://www.netflix.com/title/60026106"><img src="../../imagens/icone_netflix.png" alt="logo netflix"></a>
     <hr>
     <div>
         Confira o trailer:
