--- a/paginas__sudeste/filmes_sudeste/desenforme.html
+++ b/paginas__sudeste/filmes_sudeste/desenforme.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="filmes brasileiros, filmes do brasil, cinema brasileiro, cinema do brasil, cinema, fimes, brasil, sudeste, clássicos do cinema brasil, curadoria filmes, curadoria, clássicos cinema brasil, clássicos cinema brasileiro, aqui_no, aqui no, aquino, akino, aki no, aki_no, filmes sudeste, filmes do sudeste, filmes sudeste brasil, filmes sudeste do brasil, produção sudeste, produção cinematográfica sudeste, produção cinema brasil, produção cinema sudeste, cinema indígena, filme indígena, povos do brasil, filme indígena sudeste, rio de janeiro, rj, são paulo, sp, espírito santo, es, minas gerais, mg, Ök’ahpó - Desenforme, okahpo, ok ahpo, desenforme, Ka’a’i - O Ritual da Erva Mate, kaai ritual da erva mate, documentário, documentario, documentário indigena, doc, doc indigena, documentário indígena, doc indígena, Adolfo Borges">
     <meta name="description" content="Saiba mais sobre o filme 'Ök'ahpó - Desenforme' na Aqui_no. Uma curadoria de filmes brasileiros que os categoriza de acordo com a região do país em que foram produzidos, concebidos, realizados. Um projeto realizado por um grupo de estudantes da Coderhouse para conhecer, assistir, deleitar de filmes feitos aqui no norte, nordeste, centro-oeste, sudeste e sul!">
-    <link rel="shortcut icon" href="/imagens/imagens sudeste/favicon_sudeste.png">
+    <link rel="shortcut icon" href="../../imagens/imagens sudeste/favicon_sudeste.png">
     <title>Ök'ahpó - Desenforme</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html"><strong>Aqui_no</strong></a></li>
-            <li><a href="/paginas_norte/norte.html">_norte</a></li>
-            <li><a href="/paginas_nordeste/nordeste.html">_nordeste</a></li>
-            <li><a href="/paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
-            <li><a href="/paginas__sudeste/sudeste.html">_sudeste</a></li>
-            <li><a href="/paginas__sul/sul.html">_sul</a></li>
-            <li><a href="/pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
+            <li><a href="../../index.html"><strong>Aqui_no</strong></a></li>
+            <li><a href="../../paginas_norte/norte.html">_norte</a></li>
+            <li><a href="../../paginas_nordeste/nordeste.html">_nordeste</a></li>
+            <li><a href="../../paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
+            <li><a href="../../paginas__sudeste/sudeste.html">_sudeste</a></li>
+            <li><a href="../../paginas__sul/sul.html">_sul</a></li>
+            <li><a href="../../pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
         </ul> 
     </nav>
     <header>
-        <a href="/paginas__sudeste/sudeste.html"><img src="/imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
+        <a href="../../paginas__sudeste/sudeste.html"><img src="../../imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
         <h2>_sudeste</h2>
         <h1>Ök'ahpó - Desenforme</h1>
             <table>
@@ -35,7 +35,7 @@
                 <td>8 minutos</td>
             </tr>
         </table>
-        <img src="/imagens/imagens sudeste/filmes sudeste/desenforme.png" alt="foto Ök'ahpó - Desenforme">
+        <img src="../../imagens/imagens sudeste/filmes sudeste/desenforme.png" alt="foto Ök'ahpó - Desenforme">
     </header>
     <section>
     <div>
@@ -48,7 +48,7 @@
     <div>
         Assista em:
     </div>
-    <a href="https://ufmt.br/povosdobrasil/index.php?option=com_k2&view=item&id=147:oek-ahpo-desenforme"><img src="/imagens/icone_povos-do-brasil.png" alt="logo povos do brasil"></a>
+    <a href="https://ufmt.br/povosdobrasil/index.php?option=com_k2&view=item&id=147:oek-ahpo-desenforme"><img src="../../imagens/icone_povos-do-brasil.png" alt="logo povos do brasil"></a>
     </section>
     <footer>
         Aqui_no 2023®
