--- a/paginas__sudeste/filmes_sudeste/osNormais.html
+++ b/paginas__sudeste/filmes_sudeste/osNormais.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="filmes brasileiros, filmes do brasil, cinema brasileiro, cinema do brasil, cinema, fimes, brasil, sudeste, clássicos do cinema brasil, curadoria filmes, curadoria, clássicos cinema brasil, clássicos cinema brasileiro, aqui_no, aqui no, aquino, akino, aki no, aki_no, filmes sudeste, filmes do sudeste, filmes sudeste brasil, filmes sudeste do brasil, produção sudeste, produção cinematográfica sudeste, produção cinema brasil, produção cinema sudeste, clássicos do cinema brasil, clássicos, clássicos cinema, clássicos cinema brasil, clássicos cinema brasileiro, filmes clássicos do brasil, filmes clássicos brasil, filmes clássicos brasileiros, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste brasileiro, rio de janeiro, rj, são paulo, sp, espírito santo, es, minas gerais, mg, os normais, os normais o filme, Fernanda Torres, Marisa Orth, Luiz Fernando Guimarães, Evandro Mesquita, José Alvarenga Junior">
     <meta name="description" content="Saiba mais sobre o filme 'Os Normais' na Aqui_no. Uma curadoria de filmes brasileiros que os categoriza de acordo com a região do país em que foram produzidos, concebidos, realizados. Um projeto realizado por um grupo de estudantes da Coderhouse para conhecer, assistir, deleitar de filmes feitos aqui no norte, nordeste, centro-oeste, sudeste e sul!">
-    <link rel="shortcut icon" href="/imagens/imagens sudeste/favicon_sudeste.png">
+    <link rel="shortcut icon" href="../../imagens/imagens sudeste/favicon_sudeste.png">
     <title>Os Normais - O Filme</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html"><strong>Aqui_no</strong></a></li>
-            <li><a href="/paginas_norte/norte.html">_norte</a></li>
-            <li><a href="/paginas_nordeste/nordeste.html">_nordeste</a></li>
-            <li><a href="/paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
-            <li><a href="/paginas__sudeste/sudeste.html">_sudeste</a></li>
-            <li><a href="/paginas__sul/sul.html">_sul</a></li>
-            <li><a href="/pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
+            <li><a href="../../index.html"><strong>Aqui_no</strong></a></li>
+            <li><a href="../../paginas_norte/norte.html">_norte</a></li>
+            <li><a href="../../paginas_nordeste/nordeste.html">_nordeste</a></li>
+            <li><a href="../../paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
+            <li><a href="../../paginas__sudeste/sudeste.html">_sudeste</a></li>
+            <li><a href="../../paginas__sul/sul.html">_sul</a></li>
+            <li><a href="../../pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
         </ul> 
     </nav>
     <header>
-        <a href="/paginas__sudeste/sudeste.html"><img src="/imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
+        <a href="../../paginas__sudeste/sudeste.html"><img src="../../imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
         <h2>_sudeste</h2>
         <h1>Os Normais - O Filme</h1>
         <table>
@@ -35,7 +35,7 @@
                 <td>110 minutos</td>
             </tr>
         </table>
-        <img src="/imagens/imagens sudeste/filmes sudeste/os-normais-o-filme.png" alt="foto Os Normais">
+        <img src="../../imagens/imagens sudeste/filmes sudeste/os-normais-o-filme.png" alt="foto Os Normais">
     </header>
     <section>
     <div>
@@ -51,7 +51,7 @@
     <div>
         Assista em:
     </div>
-    <a href="https://globoplay.globo.com/os-normais/t/X7Z16SvjYj/"><img src="/imagens/icone_globoplay.png" alt="logo globoplay"></a>
+    <a href="https://globoplay.globo.com/os-normais/t/X7Z16SvjYj/"><img src="../../imagens/icone_globoplay.png" alt="logo globoplay"></a>
     <hr>
     <div>
         Confira o trailer:
