--- a/paginas__sudeste/filmes_sudeste/queHorasElaVolta.html
+++ b/paginas__sudeste/filmes_sudeste/queHorasElaVolta.html
@@ -6,23 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="filmes brasileiros, filmes do brasil, cinema brasileiro, cinema do brasil, cinema, fimes, brasil, sudeste, clássicos do cinema brasil, curadoria filmes, curadoria, clássicos cinema brasil, clássicos cinema brasileiro, aqui_no, aqui no, aquino, akino, aki no, aki_no, filmes sudeste, filmes do sudeste, filmes sudeste brasil, filmes sudeste do brasil, produção sudeste, produção cinematográfica sudeste, produção cinema brasil, produção cinema sudeste, clássicos do cinema brasil, clássicos, clássicos cinema, clássicos cinema brasil, clássicos cinema brasileiro, filmes clássicos do brasil, filmes clássicos brasil, filmes clássicos brasileiros, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste do brasil, filmes clássicos do sudeste brasileiro, que horas ela volta, que horas ela volta?, rio de janeiro, rj, são paulo, sp, espírito santo, es, minas gerais, mg, regina casé">
     <meta name="description" content="Saiba mais sobre o filme 'Que Horas Ela Volta?' na Aqui_no. Uma curadoria de filmes brasileiros que os categoriza de acordo com a região do país em que foram produzidos, concebidos, realizados. Um projeto realizado por um grupo de estudantes da Coderhouse para conhecer, assistir, deleitar de filmes feitos aqui no norte, nordeste, centro-oeste, sudeste e sul!">
-    <link rel="shortcut icon" href="/imagens/imagens sudeste/favicon_sudeste.png">
+    <link rel="shortcut icon" href="../../imagens/imagens sudeste/favicon_sudeste.png">
     <title>Que Horas Ela Volta?</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html"><strong>Aqui_no</strong></a></li>
-            <li><a href="/paginas_norte/norte.html">_norte</a></li>
-            <li><a href="/paginas_nordeste/nordeste.html">_nordeste</a></li>
-            <li><a href="/paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
-            <li><a href="/paginas__sudeste/sudeste.html">_sudeste</a></li>
-            <li><a href="/paginas__sul/sul.html">_sul</a></li>
-            <li><a href="/pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
+            <li><a href="../../index.html"><strong>Aqui_no</strong></a></li>
+            <li><a href="../../paginas_norte/norte.html">_norte</a></li>
+            <li><a href="../../paginas_nordeste/nordeste.html">_nordeste</a></li>
+            <li><a href="../../paginas_centroOeste/centroOeste.html">_centro-oeste</a></li>
+            <li><a href="../../paginas__sudeste/sudeste.html">_sudeste</a></li>
+            <li><a href="../../paginas__sul/sul.html">_sul</a></li>
+            <li><a href="../../pagina__sobre/sobreOProjeto.html">_sobre_o_projeto</a></li>
         </ul> 
     </nav>
     <header>
-        <a href="/paginas__sudeste/sudeste.html"><img src="/imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
+        <a href="../../paginas__sudeste/sudeste.html"><img src="../../imagens/icone_voltar.png" alt="ícone para voltar">voltar</a>
         <h2>_sudeste</h2>
         <h1>Que Horas Ela Volta?</h1>
         <h4>Vencedor do Grande Prêmio de Cinema Brasileiro</h4>
@@ -36,7 +36,7 @@
                 <td>112 minutos</td>
             </tr>
         </table>
-        <img src="/imagens/imagens sudeste/filmes sudeste/que_horas_ela_volta.png" alt="foto Que Horas Ela Volta?">
+        <img src="../../imagens/imagens sudeste/filmes sudeste/que_horas_ela_volta.png" alt="foto Que Horas Ela Volta?">
     </header>
     <section>
     <div>
@@ -52,8 +52,8 @@
     <div>
         Assista em:
     </div>
-    <a href="https://globoplay.globo.com/que-horas-ela-volta/t/X6KmRdP68Z/"><img src="/imagens/icone_globoplay.png" alt="logo globoplay"></a>
-    <a href="https://www.netflix.com/br/title/80039527"><img src="/imagens/icone_netflix.png" alt="logo netflix"></a>
+    <a href="https://globoplay.globo.com/que-horas-ela-volta/t/X6KmRdP68Z/"><img src="../../imagens/icone_globoplay.png" alt="logo globoplay"></a>
+    <a href="https://www.netflix.com/br/title/80039527"><img src="../../imagens/icone_netflix.png" alt="logo netflix"></a>
     <hr>
     <div>
         Confira o trailer:
