--- a/paginas_centroOeste/centroOeste.html
+++ b/paginas_centroOeste/centroOeste.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/imagens/imagens centro-oeste/favicon_centro_oeste.png">
+    <link rel="shortcut icon" href="../imagens/imagens centro-oeste/favicon_centro_oeste.png">
     <title>_centro-oeste</title>
 </head>
 <body>
